ejemplo paradigma tar.gz

--- a/EjemploParadigmaOrientadoAObjetos/.project
+++ b/EjemploParadigmaOrientadoAObjetos/.project
@@ -2,5 +2,7 @@
 Title=EjemploParadigmaOrientadoAObjetos
 Startup=Main
 Version=0.0.1
+TabSize=2
 Language=en_US
+SourcePath=/home/minino/Documentos/Gambas2/Curso de gambas3/CursoGambas3/EjemploParadigmaOrientadoAObjetos
 Packager=1
